objects/VisitReport__c.object
<CustomObject>
    <description>SFDP-265: Created (09/05/2018). Used to store details of a visit to a customer. The chief value comes from being able to associate many opportunities with the visit report. Its a bit like the &apos;log a call&apos; OOTB functionality but ended up being a custom object instead of a task/event because of the M:M need between Visit Report and Opportunity</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDP-265: Created. Visit Reports are &apos;owned&apos; by Accounts.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlternativeAddressDetail__c</fullName>
        <description>SFDP-265. Created.</description>
        <formula>if(LEN(AlternativeAddress__r.Street__c)&gt;0, AlternativeAddress__r.Street__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(AlternativeAddress__r.City__c)&gt;0, AlternativeAddress__r.City__c&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(AlternativeAddress__r.State__c)&gt;0, AlternativeAddress__r.State__c&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(AlternativeAddress__r.PostalCode__c)&gt;0, AlternativeAddress__r.PostalCode__c,&quot;&quot;) &amp; BR() &amp;
If(LEN(TEXT(AlternativeAddress__r.Country__c)) &gt;0, TEXT(AlternativeAddress__r.Country__c),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternative Address Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternativeAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDP-265. Created.</description>
        <label>Alternative Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>AccountShiptoAddress__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AccountShiptoAddress__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>VisitReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDP-265. Created.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HelixId__c</fullName>
        <externalId>true</externalId>
        <label>HelixId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ImcdBusinessUnit__c</fullName>
        <description>SFDP-265 - Created.</description>
        <formula>TEXT(Account__r.ImcdBusinessUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMCD Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainAddress__c</fullName>
        <description>SFDP-265. Created.</description>
        <formula>if(LEN(Account__r.ShippingStreet)&gt;0, Account__r.ShippingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Account__r.ShippingCity)&gt;0, Account__r.ShippingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.ShippingState)&gt;0, Account__r.ShippingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.ShippingPostalCode)&gt;0, Account__r.ShippingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Account__r.ShippingCountry) &gt;0, Account__r.ShippingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerFullName__c</fullName>
        <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>An optional field for a short summary of the visit report</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field to define if it was a call or a visit</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                    <default>true</default>
                    <label>Visit</label>
                </value>
                <value>
                    <fullName>Event/Trade Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>SFDP-265. Created.</description>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <label>Visit Report</label>
    <nameField>
        <displayFormat>VRE-{000000000}</displayFormat>
        <label>Visit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>A standard record type</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>